<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2026 Mist-OS
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/hbm_title">

    <PreferenceCategory android:title="@string/hbm_manual_category">
        <SwitchPreferenceCompat
            android:key="hbm"
            android:title="@string/hbm_enable_title"
            android:summary="@string/hbm_enable_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/hbm_auto_category">
        <SwitchPreferenceCompat
            android:key="auto_hbm"
            android:title="@string/auto_hbm_enable_title"
            android:summary="@string/auto_hbm_enable_summary"
            android:defaultValue="false" />

        <SeekBarPreference
            android:key="auto_hbm_threshold"
            android:title="@string/auto_hbm_threshold_title"
            android:summary="@string/auto_hbm_threshold_summary"
            android:dependency="auto_hbm"
            android:defaultValue="20000"
            android:max="60000"
            app:min="1000"
            app:seekBarIncrement="1000"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:key="auto_hbm_enable_time"
            android:title="@string/auto_hbm_enable_time_title"
            android:summary="@string/auto_hbm_enable_time_summary"
            android:dependency="auto_hbm"
            android:defaultValue="1"
            android:max="10"
            app:min="0"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:key="auto_hbm_disable_time"
            android:title="@string/auto_hbm_disable_time_title"
            android:summary="@string/auto_hbm_disable_time_summary"
            android:dependency="auto_hbm"
            android:defaultValue="3"
            android:max="30"
            app:min="0"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true" />
    </PreferenceCategory>

    <Preference
        android:key="hbm_footer"
        android:selectable="false"
        android:summary="@string/hbm_footer" />
</PreferenceScreen>
